; ModuleID = '/home/carl/AnghaBench/reactos/drivers/multimedia/audio/sndblst.old/extr_card.c_BeginPlayback.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/multimedia/audio/sndblst.old/extr_card.c_BeginPlayback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"BeginPlayback(%d, %d, %d, %d)\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Initiating playback\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BeginPlayback(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* %9, align 4
  %14 = call i32 (i8*, ...) @DPRINT(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %11, i32 %12, i32 %13)
  %15 = call i32 (i8*, ...) @DPRINT(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @SB_WRITE_BYTE(i32 %16, i32 198)
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @SB_WRITE_BYTE(i32 %18, i32 0)
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %9, align 4
  %22 = srem i32 %21, 256
  %23 = call i32 @SB_WRITE_BYTE(i32 %20, i32 %22)
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %9, align 4
  %26 = sdiv i32 %25, 256
  %27 = call i32 @SB_WRITE_BYTE(i32 %24, i32 %26)
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @DPRINT(i8*, ...) #1

declare dso_local i32 @SB_WRITE_BYTE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
